MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@font-face{
    font-family: 'Raleway';
    src: url("#{resource['fonts/Raleway-Regular.ttf']}") format('truetype');
        font-weight: normal;
        font-style: normal;
}

.content-font{
    font-family: 'Raleway', Arial, sans-serif;
}
.title-font{
    font-family: 'Berlin sans fb', sans-serif !important;
    font-weight: 500;
}

body{
    background-color: #F7F7F7;
    height:100%;
}

.top-nav{
    background-color: #1c1c1d;
    height:25px;
}
.top-nav-content{
    margin-right:60px;
}
.top-nav-content>span{
    color:white;
    margin-right:15px;
    font-size:10px;
}
.navbar-default{
    background-color: rgba(0,0,0,0.6);
    border-color: transparent;
}
.navbar-default .navbar-nav>li>a{
    color: white;
    font-size: 18px;
}
.nav>li>a:hover, .nav>li>a:focus{
    color: #d96f70 !important;
}
.navbar-nav>li>a{
    line-height: 30px;
}

.form-control-spacing{
    margin-top:5px;
    margin-bottom:5px;
}

.ui-datatable{
    margin-top:10px;
}

.message-link{
    text-decoration:underline;
    cursor:pointer;
}

.message-link:hover{
    text-decoration:none;
}

.pointer{
    cursor:pointer;
}
.header-push-bottom{
    margin-top:15px;
}

.ui-menu.ui-widget li > .ui-menuitem-link.ui-state-hover{
    background:#aaa;
}

.input-addon-fixedwidth{
    width:150px;
}
.service-image{
    width:500px;
    height:230px !important;
}
.service-title{
    font-family:Century Gothic, sans-serif;
    font-size:24pt;
    color:#ababab;
}
h4.service-cost{
    font-size:35pt;
    font-family:Arial;
    color:#bbb;
}
h4.service-des{
    font-size:15pt;
    font-family:Arial;
    color:#808080;
    font-style: italic;
}   

.alert-default{
    background-color:#bababa;
    border-color: #aaa;
    cursor:pointer;
}

.alert-purple{
    background-color:#dbd9f7;
    color: #50318f;
    border-color: #dfbcf1;
}

.alert-blue{
    color: #31708f;
    background-color: #d9edf7;
    border-color: #bce8f1;
}

.alert-orange{
    color: #8f5f31;
    background-color: #f9efcb;
    border-color: #f1e0bc;
}
.alert-green {
    color: #3c763d;
    background-color: #dff0d8;
    border-color: #d6e9c6;
}

.alert-yellow {
    color: #8a6d3b;
    background-color: #fcf8e3;
    border-color: #faebcc;
}

.font-brightred{
    color:#ED2E38;
}

h2.roleTitle{
    font-size:12pt;
}

.spacing{
    margin-top:5px;
    margin-bottom:5px;
}
.morespacing{
    margin-top:10px;
    margin-bottom:10px;
}
.message-content-area{
    min-height:250px;
}
.wide-modal{
    min-width: 700px;
}

.rights-btn{
    min-width:450px;
}

.feedback-content-box{
    background: rgba(240,240,240,0.85);
    border-radius:10px;
    padding:15px;
    
}

.like-box{
    padding-left:10px;
    padding-right:10px;
    display:inline-block;
}

.ui-messages-error-icon{
    display:none;
}
.ui-messages-error-summary{
    margin-left:0px;
}

.rights-item{
    font-family: Arial;
    font-weight:400;
    font-size:12pt;
    padding:8px;
}
ul.rights-menu li{
    min-width:400px;
}

.loader{
    width:16px;
    height:auto;
}

.ui-state-default{
    border-radius: 0px;
    -webkit-border-radius: 0px;
}

.left-container > ui-menu{
    width:100%;
}

.left-container > form > .ui-menu{
    width:100%;
}
.left-container > .ui-menu{
    width:100%;
}



.left-container{
    width: 26%;
    float:left;
    margin-top: 50px;
    margin-bottom: 50px;
}

.right-container{
    width:74%;
    float:right;
    margin-top: 20px;
    margin-bottom: 50px;
    position:relative;
}
.content-area{
    position:relative;
}
/*@media (min-width: 591px) {
  .content-area>.container {
    width: 577px;
  }
}
@media (min-width: 764px) {
  .content-area>.container {
    width: 747px;
  }
}
@media (min-width: 924px) {
  .content-area>.container {
    width: 901px;
  }
}*/

.menu-width{
    width:100%;
}
//*************************************************//
//footer
* {
    margin: 0;
}
html {
    height: 100%;
}
body{
    height: 100%;
    font-family: 'Raleway', Arial, sans-serif;
}
.wrapper {
    min-height: 100%;
/*    height: auto !important;  IE6 support 
    height: 100%;*/
    margin: 0 auto -80px; /* the bottom margin is the negative value of the footer's height */
}
.footer{
    background-color:#732829;
    color:#fff;
    padding:25px;
    overflow: hidden;
    width:100%;
}
.footer, .push {
    height: 80px; /* .push must be the same height as .footer */
}
.footer>.container>ul>li>a:hover, .footer>.container>.nav>li>a:focus{
    color:white !important;
}
.footer>.container>ul>li{
    vertical-align: middle;
    margin: 0px;
}
.footer>.container>ul>li>a{
    padding-right:15px;
    padding-top:0;
    padding-bottom:0;
}

//************************************************//


// Sub-system layouts
.no-border{
    border:none;
}
.ui-breadcrumb{
    background: transparent;
    border:0px;
    -webkit-box-shadow: inset 0 0px 0 #ffffff;
    -moz-box-shadow: inset 0 0px 0 #ffffff;
    box-shadow: inset 0 0px 0 #ffffff;  
}

h2.system-welcome{  
}
.system-breadcrumb{
    padding:5px;
}
.system-description{
    padding-top:30px;
}
.system-banner{
    height:180px;
    width:100%;
    position:relative;
    border-radius:6px 6px 0px 0px;
}
.wms-system-banner{
    background: url('../img/wms.jpg') -0px -0px no-repeat;
}
.oes-system-banner{
    background: url('../img/OES.jpg') 0px -220px no-repeat;
}
.tms-system-banner{
    background: url('../img/TMS.jpg') -0px -0px no-repeat;
}
.mrp-system-banner{
    background: url('../img/MRP.jpg') -0px -0px no-repeat;
}
.crms-system-banner{
    background: url('../img/CRMS.jpg') -140px -120px no-repeat;
}
.grns-system-banner{
    background: url('../img/GRNS.jpg') 0px -50px;
}
.system-banner-overlay{
    background: rgba(115,40,41,0.9);
    color: white;
    position:absolute;
    width: 814px;
    height:40px;
    font-size:30px;
    padding-right:15px;
    text-align:right;
    top:170px;
    z-index:1;
}

.pad-it{
    padding-left: 10px;
}

.create-role-table-style td{
    padding:3px 0px 3px 0px;
}

.product-box{
    /*min-height:400px;*/
}

.product-description{
    min-height:250px;
}
.product-des-wi{
    min-height:460px;
}
.min-horizontal-width{
    min-width: 50px;
}
ul.a {
    list-style-type: circle;
}

ul.b {
    list-style-type: square;
}

ol.c {
    list-style-type: upper-roman;
}

ol.d {
    list-style-type: lower-alpha;
}

.ui-icon-triangle-1-s{
    background-position: -68px -16px;
}

.center {
    margin-left: auto;
    margin-right: auto;
    width: 70%;
}

.user-info{
    background-color: #E7e7e7;
    border-radius: 6px 6px 0px 0px;
    width:100%;
    height:auto;
    padding:10px;
}
.user-info-right{
    display:inline-block;
    padding-left:10px;
}
.avatar{
    background: url('../img/avatar.png') no-repeat;
    display:inline-block;
    height:75px;
    width:63px;
}
.user-name{
    text-align: left;
    font-size:19px;
    color: #732829;
}
.user-company{
    font-size:13px;
    margin-top:-4px;
}
.inbox, .viewlog{
    font-size:19px;
    text-decoration: none;
    padding-top:10px;
}
#unread-msg{
    background-color: rgba(230,13,13,0.8);
    border-radius: 50%;
    height:13px;
    width: 13px;
    color:white;
    display: inline-block;
    font-size: 8px;
    vertical-align:12px;
    margin-left: -7px;
    padding:1px;
    text-align: center;
}
.user-info>hr{
    margin-top:10px;
    margin-bottom:10px;
}
.user-info>.role-list{
    list-style: none;
}
.user-info>.role-list>li>.glyphicon{
    padding-right:5px;
}
.role-list>li{
    font-size:13px;
}
.user-info-right>a{
    color: #333;
}
.user-info-right>a:hover{
    color: #732829;
}


.ui-menu.ui-widget{
    -webkit-border-radius: 0px 0px 6px 6px; 
    -moz-border-radius: 0px 0px 6px 6px;
    border-radius: 0px 0px 6px 6px;
}
.ui-breadcrumb ul li .ui-menuitem-link{
    margin-top:0px;
}

